force-app/main/default/objects/Maintenance_Request__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description</label><type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines></CustomField>