force-app/main/default/objects/Maintenance_Request__c/fields/Property__c.field-meta.xml
<CustomField><fullName>Property__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Property</label><referenceTo>Property__c</referenceTo><relationshipLabel>Maintenance Requests</relationshipLabel><relationshipName>Maintenance_Requests</relationshipName><required>true</required><type>Lookup</type></CustomField>