force-app/main/default/objects/Maintenance_Request__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Open</fullName><default>true</default><label>Open</label></value><value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value></valueSetDefinition></valueSet></CustomField>