force-app/main/default/objects/Maintenance_Request__c/fields/Vendor__c.field-meta.xml
<CustomField><fullName>Vendor__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Vendor</label><referenceTo>Vendor__c</referenceTo><relationshipLabel>Maintenance Requests</relationshipLabel><relationshipName>Maintenance_Requests</relationshipName><type>Lookup</type></CustomField>