force-app/main/default/objects/Maintenance_Request__c/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Description__c)</errorConditionFormula>
    <errorMessage>Description is required.</errorMessage>
</ValidationRule>